# middleware

./: CMakeLists.txt  README.md  middleware.vix  vix.json
examples/: 01_basic.cpp  02_chain.cpp  03_short_circuit.cpp  04_full_demo.cpp  CMakeLists.txt
include/cnerium/middleware/: Context.hpp  Middleware.hpp  Next.hpp  Pipeline.hpp  middleware.hpp  version.hpp
tests/: test_basic.cpp  test_context.cpp  test_middleware.cpp  test_pipeline.cpp
